# FrameworkForCpp

./: CMakeLists.txt  README.md  environmentSetup
config/: MainConfig.cfg
dependencies/: CMakeLists.txt
dependencies/optparse/: optparse.h
include/: Project.h
src/: CMakeLists.txt  Main.cpp  Project.cpp
test/: CMakeLists.txt
